Enhance TenantAuthenticationProvider to return custom authenticated token with role-based authorities